--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-i18n": "^8.28.2",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
